// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/collaborator-avatars/CollaboratorListItem render() should render default component 1`] = `
<li>
  <div
    className="collaborator-list-item"
  >
    <div
      className="user"
    >
      <CollaboratorAvatarItem
        allowBadging={true}
        email="testc@example.com"
        expiration={
          Object {
            "expiresAt": "Jan 1, 1966",
          }
        }
        hasCustomAvatar={true}
        id={1}
        name="test c"
      />
      <div
        className="info"
      >
        <div
          className="name"
        >
          <Link
            className=""
            href="/profile/undefined"
            rel="noopener"
            target="_blank"
            title="test c"
          >
            test c
          </Link>
        </div>
        <div
          className="email"
        >
          <Link
            className=""
            href="mailto:testc@example.com"
            title="testc@example.com"
          >
            testc@example.com
          </Link>
        </div>
      </div>
    </div>
    <div
      className="role"
    />
  </div>
</li>
`;

exports[`features/collaborator-avatars/CollaboratorListItem render() should render group collaborator 1`] = `
<li>
  <div
    className="collaborator-list-item"
  >
    <div
      className="user"
    >
      <CollaboratorAvatarItem
        allowBadging={true}
        email="testc@example.com"
        expiration={
          Object {
            "expiresAt": "Jan 1, 1966",
          }
        }
        hasCustomAvatar={true}
        id={1}
        name="test c"
      />
      <div
        className="info"
      >
        <div
          className="name group"
        >
          test c
        </div>
      </div>
    </div>
    <div
      className="role"
    />
  </div>
</li>
`;

exports[`features/collaborator-avatars/CollaboratorListItem render() should render pending collaborator 1`] = `
<li>
  <div
    className="collaborator-list-item"
  >
    <div
      className="user"
    >
      <CollaboratorAvatarItem
        allowBadging={true}
        email="testc@example.com"
        expiration={
          Object {
            "expiresAt": "Jan 1, 1966",
          }
        }
        hasCustomAvatar={true}
        id={1}
        name="test c"
      />
      <div
        className="info"
      >
        <div
          className="name pending"
        >
          <Link
            className=""
            href="/profile/undefined"
            rel="noopener"
            target="_blank"
            title="test c"
          >
            test c
          </Link>
        </div>
        <div
          className="email"
        >
          <Link
            className=""
            href="mailto:testc@example.com"
            title="testc@example.com"
          >
            testc@example.com
          </Link>
        </div>
      </div>
    </div>
    <div
      className="role"
    >
      <FormattedMessage
        defaultMessage="Pending"
        id="boxui.collaboratorAvatars.collaboration.pendingCollabText"
      />
    </div>
  </div>
</li>
`;
